--- a/js/external_js.html
+++ b/js/external_js.html
@@ -5,8 +5,6 @@
     <title>external_js</title>
 </head>
 <body>
-
-    <script src="js/external_js.js"></script>
-
+    <script src="external_js.js"></script>
 </body>
 </html>
