update on work and finished loops exercises

--- a/conditionals.html
+++ b/conditionals.html
@@ -5,6 +5,6 @@
     <title>Conditionals.JS</title>
 </head>
 <body>
-    <Script src="conditionals.js"></Script>
+    <Script src="js/conditionals.js"></Script>
 </body>
 </html>
