--- a/functions_js.html
+++ b/functions_js.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Loops_Exercises</title>
+    <title>Functions.JS</title>
 </head>
 <body>
-    <script src="for_loops.js"></script>
+    <script src="js/functions.js"></script>
 </body>
 </html>
