--- a/Welcome.html
+++ b/Welcome.html
@@ -5,9 +5,69 @@
     <title>Hello, World!</title>
 </head>
     <body>
-    <h1>Hello, World!</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda culpa, debitis delectus eos error, itaque laboriosam libero, molestias natus nulla obcaecati quae quasi quis rerum suscipit tempora ullam velit veritatis?
-        </p>
+    <h1 id="#top">Welcome to Veridian Dynamics!</h1>
+    <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p><hr>
+
+    <h2>Core Values</h2>
+
+        <ul>
+            <li>Competence</li>
+            <li>Involvement</li>
+            <li>Technology</li>
+        </ul>
+
+    <h2>Our Process</h2>
+
+        <ol>
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
+        </ol>
+
+    <h2>2020 Vision</h2>
+
+        <ul>
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by 20%</li>
+            <li>Increase Business by 30%</li>
+        </ul>
+    <hr>
+
+    <h2>Company Vision</h2>
+
+    <img srcset="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" class="photo-item__img" alt="Person Holding Black Sony Ps 4 Game Controller" data-image-width="3000" data-image-height="2000" data-big-src="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" data-large-src="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940" data-tiny-src="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500" data-tiny-srcset="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" src="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500">
+    <img srcset="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" class="photo-item__img" alt="Time Lapse Photography of Blue Lights" data-image-width="2999" data-image-height="1999" data-big-src="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" data-large-src="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940" data-tiny-src="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500" data-tiny-srcset="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" src="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500">
+    <img srcset="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" class="photo-item__img" alt="Black and Gray Laptop Computer" data-image-width="4288" data-image-height="2848" data-big-src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" data-large-src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940" data-tiny-src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500" data-tiny-srcset="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500">
+    <img srcset="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" class="photo-item__img" alt="Photo of Person Typing on Computer Keyboard" data-image-width="6016" data-image-height="4016" data-big-src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" data-large-src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940" data-tiny-src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500" data-tiny-srcset="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500">
+
+    <h2>Our Product</h2>
+
+        <table>
+            <tr>
+                <th>Plan</th>
+                <th>Price</th>
+                <th>Features</th>
+            </tr>
+            <tr>
+                <td>Starter</td>
+                <td>$99</td>
+                <td>Base Technology</td>
+            </tr>
+            <tr>
+                <td>Advance</td>
+                <td>$199</td>
+                <td>Additional Features</td>
+            </tr>
+            <tr>
+                <td>Premium</td>
+                <td>$499</td>
+                <td>Unlimited Support</td>
+            </tr>
+        </table>
+
+    <p><em>All products come with our quality guarantee&trade;</em></p>
+
+    <a href="#top"> Go to the top of the page</a>
+
     </body>
 </html>
