feat:made a css stylesheet module and started working on styling a previous HTML file to practice CSS

--- a/Welcome.html
+++ b/Welcome.html
@@ -3,65 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello, World!</title>
+
+    <link rel="stylesheet" href="css/Welcome.css">
 </head>
     <body>
-    <h1 id="#top">Welcome to Veridian Dynamics!</h1>
-    <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p><hr>
+     <h1  class="fancy-header"  id="#top">Welcome to Veridian Dynamics!</h1>
 
-    <h2>Core Values</h2>
+        <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
+
+         <hr>
+
+     <h2 class="fancy-header">Core Values</h2>
 
         <ul>
-            <li>Competence</li>
-            <li>Involvement</li>
-            <li>Technology</li>
+            <li class="fancy-header">Competence</li>
+            <li class="fancy-header">Involvement</li>
+            <li class="fancy-header">Technology</li>
         </ul>
 
     <h2>Our Process</h2>
 
         <ol>
-            <li>Plan</li>
-            <li>Evaluate</li>
-            <li>Implement</li>
+            <li class="fancy-header">Plan</li>
+            <li class="fancy-header">Evaluate</li>
+            <li class="fancy-header">Implement</li>
         </ol>
 
     <h2>2020 Vision</h2>
 
         <ul>
-            <li>Become #1 in Technology</li>
-            <li>Increase Success by 20%</li>
-            <li>Increase Business by 30%</li>
+            <li class="fancy-header">Become #1 in Technology</li>
+            <li class="fancy-header">Increase Success by 20%</li>
+            <li class="fancy-header">Increase Business by 30%</li>
         </ul>
     <hr>
 
-    <h2>Company Vision</h2>
+    <h2 class="fancy-header">Company Vision</h2>
 
     <img srcset="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" class="photo-item__img" alt="Person Holding Black Sony Ps 4 Game Controller" data-image-width="3000" data-image-height="2000" data-big-src="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" data-large-src="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940" data-tiny-src="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500" data-tiny-srcset="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" src="https://images.pexels.com/photos/4522998/pexels-photo-4522998.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500">
     <img srcset="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" class="photo-item__img" alt="Time Lapse Photography of Blue Lights" data-image-width="2999" data-image-height="1999" data-big-src="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" data-large-src="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940" data-tiny-src="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500" data-tiny-srcset="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" src="https://images.pexels.com/photos/373543/pexels-photo-373543.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500">
     <img srcset="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" class="photo-item__img" alt="Black and Gray Laptop Computer" data-image-width="4288" data-image-height="2848" data-big-src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" data-large-src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940" data-tiny-src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500" data-tiny-srcset="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500">
     <img srcset="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" class="photo-item__img" alt="Photo of Person Typing on Computer Keyboard" data-image-width="6016" data-image-height="4016" data-big-src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=750&amp;w=1260" data-large-src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;h=650&amp;w=940" data-tiny-src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500" data-tiny-srcset="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500 1x, https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;w=500 2x" src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500">
 
-    <h2>Our Product</h2>
+    <h2 class="fancy-header">Our Product</h2>
 
         <table>
             <tr>
-                <th>Plan</th>
-                <th>Price</th>
-                <th>Features</th>
+                <th class="fancy-header">Plan</th>
+                <th class="fancy-header">Price</th>
+                <th class="fancy-header">Features</th>
             </tr>
             <tr>
-                <td>Starter</td>
-                <td>$99</td>
-                <td>Base Technology</td>
+                <td class="fancy-header">Starter</td>
+                <td class="fancy-header">$99</td>
+                <td class="fancy-header">Base Technology</td>
             </tr>
             <tr>
-                <td>Advance</td>
-                <td>$199</td>
-                <td>Additional Features</td>
+                <td class="fancy-header">Advance</td>
+                <td class="fancy-header">$199</td>
+                <td class="fancy-header">Additional Features</td>
             </tr>
             <tr>
-                <td>Premium</td>
-                <td>$499</td>
-                <td>Unlimited Support</td>
+                <td class="fancy-header">Premium</td>
+                <td class="fancy-header">$499</td>
+                <td class="fancy-header">Unlimited Support</td>
             </tr>
         </table>
 
