--- a/external_js.html
+++ b/external_js.html
@@ -5,6 +5,6 @@
     <title>external_js</title>
 </head>
 <body>
-    <script src="js/external_js.js"></script>
+    <script src="js/external.js"></script>
 </body>
 </html>
