--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>flexbox-nav-exercise	</title>
-		<link rel="stylesheet" href="css/flexbox-nav-execise.css">
-	</head>
-	<body>
-		<header>
-			<nav>
-				<ul class="nav-bar-left">
-					<li><a href="#">Articles</a></li>
-					<li><a href="#">Products</a></li>
-					<li><a href="#">Market</a></li>
-					<li><a href="#">Jobs</a></li>
-				</ul>
-				<ul class="nav-bar-logo">
-					<li><a href="#">Logo</a></li>
-				</ul>
-				<ul class="nav-bar-right">
-					<li><a href="#">Follow Us</a></li>
-					<li><a href="#">S</a></li>
-					<li><a href="#">C</a></li>
-					<li><a href="#">A</a></li>
-				</ul>
-			</nav>
-		</header>
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<title>Flexbox nav</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Work+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/flexbox-nav-exercise.css" >
+</head>
+<body>
+<header>
+	<nav>
+		<ul class="nav-bar-left">
+			<li><a href="#">Articles</a></li>
+			<li><a href="#">Products</a></li>
+			<li><a href="#">Market</a></li>
+			<li><a href="#">Jobs</a></li>
+		</ul>
+		<ul class="nav-bar-logo">
+			<li><a href="#">Logo</a></li>
+		</ul>
+		<ul class="nav-bar-right">
+			<li><a href="#">Follow Us</a></li>
+			<li><a href="#">S</a></li>
+			<li><a href="#">C</a></li>
+			<li><a href="#">A</a></li>
+		</ul>
+	</nav>
+</header>
+<p>&#8593;<br>true center</p>
+</body>
 </html>
