feat:worked on more selectors and properties

--- a/bootstrap-grid-lec.html
+++ b/bootstrap-grid-lec.html
@@ -61,6 +61,17 @@
     </div>
 
 
+    <h3 class="text-center mt-3">Specific colums - AND specific screen size settings!</h3>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 col-md-6 col-lg-8">One of Two</div>
+            <div class="col-sm-8 col-md-6 col-lg-4">Two of two</div>
+        </div>
+
+        <div class="row">
+            <div class="col">One automatic col</div>
+        </div>
 
 
 
@@ -70,7 +81,7 @@
 
 
 
-
+    </div>
 
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
