feat:finished BOM exercise

--- a/defuse-the-bom.html
+++ b/defuse-the-bom.html
@@ -18,7 +18,7 @@
     // TODO: This function needs to be called once every second
     var explosive = setInterval(function updateTimer() {
         if (detonationTimer == 0) {
-            alert('EXTERMINATE!');
+            alert('EXTERMINATED!');
             document.body.innerHTML = '';
         } else if (detonationTimer > 0) {
             document.getElementById('timer').innerHTML = detonationTimer;
@@ -30,7 +30,7 @@
     // TODO: When this function runs, it needs to
     // cancel the interval/timeout for updateTimer()
     function defuseTheBOM() {
-
+        return clearTimeout(explosive);
     }
 
     // Don't modify anything below this line!
