started working with jQuery selectors

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,6 +5,12 @@
 	<title>jquery_exercises</title>
 </head>
 <body>
+	<h1 id="heading">Movies</h1>
+	<ul class="movies">
+		<li>Godzilla</li>
+		<li>Skull Island</li>
+		<li>Godzilla vs. Kong</li>
+	</ul>
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="js/jquery_exercises.js"></script>
 </body>
