completed the jQuery mouse event exercise

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,19 +5,19 @@
 	<title>Jquery Mouse event</title>
 </head>
 <body>
+	<h1>Click Here if You Dare</h1>
 
-
-
-
-
-
-
-
-
-
-
-
-
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, ea, voluptate? A alias atque commodi consequatur dicta earum illo iure magnam minus molestiae molestias natus officia quis soluta temporibus, velit?
+	</p><hr>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus doloremque dolores, eos ex facere inventore ipsa labore minima voluptate voluptatum. Delectus dignissimos laudantium, molestiae quam ratione sed sint voluptates voluptatibus?
+	</p>
+	<ul>
+		<li>Android 16</li>
+		<li>Android 17</li>
+		<li>Android 18</li>
+	</ul>
 
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="./js/jquery_exercises.js"></script>
