--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -29,25 +29,44 @@
     (function() {
         "use strict";
         // TODO: Uncomment next line and get the main header element by id
-        // var mainHeader = ;
+        var mainHeader = document.getElementById("main-header");
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
+        mainHeader.innerHTML = "JavaScript is Cool"
 
         // TODO: Uncomment the next line and get the sub header element by id
-        // var subHeader = ;
+        var subHeader = document.getElementById("sub-header");
 
         // TODO: Set the text color of subHeader to blue
 
-        // TODO: Uncomment the next line and get all list items
-        // var listItems = ;
+        subHeader.style.color = "blue";
 
-        // TODO: Set text color on every other list item to grey
+        // TODO: Uncomment the next line and get all list items
+
+        var listItems = document.getElementsByTagName("li");
+
+        // TODO: Set text color on every other list item to orange
+
+        for(var i = 0; i < listItems.length; i++){
+            listItems[i].style.color = "orange";
+        }
+
         // TODO: Set text color of li with dbid = 1 to blue
 
+        var dbid1 = document.getElementsByTagName("li")[0];
+        dbid1.style.color = "blue"
+
+
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        // var subParagraphs = ;
+
+        var subParagraphs = document.getElementsByClassName("sub-paragraph");
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+
+        for(var i = 0; i < subParagraphs.length; i++){
+            subParagraphs[i].innerHTML = "Mission Accomplished!"
+        }
+
     })();
 </script>
 </body>
