--- a/weather_map.html
+++ b/weather_map.html
@@ -3,55 +3,65 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<script src='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
-	<link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet' />
+
+	<link href='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css' rel='stylesheet'/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/weathermap-project.css">
+
 	<title>Weather Map Project</title>
+
 </head>
 <body>
-<h1 id="h1">Weather App</h1>
-<div class="container">
-	<h4>Place</h4>
-	<input type="search" placeholder="">
-	<button class="button">find</button>
+<div id="header">
+	<h1>Weather App</h1>
+	<div class="header" id="currentCity"></div>
 </div>
-<div>
-<div class="weatherContainers">13-04-2021</div>
-<div class="weatherContainers">14-04-2021</div>
-<div class="weatherContainers">15-04-2021</div>
-<div class="weatherContainers">16-04-2021</div>
-<div class="weatherContainers">17-04-2021</div>
-</div>
+	<div id="container">
+		<h4>Place</h4>
+		<input class="searchBar" type="search" placeholder="Where To?">
+		<button class="button">find</button>
+	</div>
+	<div id="weatherContainer">
+		<div class="weatherContainers"><em>13-04-2021
+		</em><hr></div>
+		<div class="weatherContainers"><em>14-04-2021</em><hr></div>
+		<div class="weatherContainers"><em>15-04-2021</em><hr></div>
+		<div class="weatherContainers"><em>16-04-2021</em><hr></div>
+		<div class="weatherContainers"><em>17-04-2021</em><hr></div>
+	</div>
 
 <div id='map' style='width: 100%; height: 400px;'></div>
 
 
 
 
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.js'></script>
 
-
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-		crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-		crossorigin="anonymous"></script>
-<script src="js/keys.js"></script>
-<script src="js/mapbox-geocoder-utils.js"></script>
-<script>
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 
-	var fiveDayForecast = $.get("http://api.openweathermap.org/data/2.5/forecast", {
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+<script src="js/keys.js"></script>
+
+<script src="js/mapbox-geocoder-utils.js"></script>
+
+<script>
+	$(document).ready(function(){
+
+	$.get("http://api.openweathermap.org/data/2.5/forecast", {
             APPID: weatherkey,
             q: "San Antonio, US",
             units: "imperial"
         }).done(function (results) {
             console.log("5 day forecast", results);
+        $('#currentCity').html("Current City: " + results.city.name);
         });
+
 
     mapboxgl.accessToken = mapBoxToken
 
@@ -62,10 +72,7 @@
         zoom: 9
     });
 
-
-
-
-
+	});
 </script>
 </body>
 </html>
