practiced with javascript functions

--- a/Practice/external_js.html
+++ b/Practice/external_js.html
@@ -4,6 +4,6 @@
 	<title>External JS</title>
 </head>
 <body>
-<script src="JS/external.js"></script>
+<script src="JS/external_practice.js"></script>
 </body>
 </html>
